[gd_scene load_steps=7 format=3 uid="uid://ky0t2odj46ce"]

[ext_resource type="Texture2D" uid="uid://bdivs16yl0bvq" path="res://icon.svg" id="1_1bt8a"]
[ext_resource type="Script" path="res://scripts/player_movement/player.gd" id="1_6qrgc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_e1efy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_1bt8a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7cvdy"]
size = Vector2(112, 125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_be8mk"]
size = Vector2(119, 126)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bgb52"]
size = Vector2(90, 112)

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 5
scale = Vector2(0.5, 0.5)
collision_mask = 3
script = ExtResource("1_6qrgc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_e1efy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_7cvdy")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, -0.5)
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="LightDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightDetection"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_be8mk")

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_bgb52")

[connection signal="area_entered" from="LightDetection" to="." method="_on_light_detection_area_entered"]
[connection signal="area_exited" from="LightDetection" to="." method="_on_light_detection_area_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
